--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,27 @@ project(tocabi_cc)
 
 add_compile_options(-std=c++17 -Ofast)
 
+find_package(OpenMP)
+if (OPENMP_FOUND)
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+endif()
+
 find_package(catkin REQUIRED
 roscpp
 tocabi_lib
 tocabi_msgs
+ct_core
+ct_models
+ct_optcon
+ct_rbd
 eigen_conversions
 )
+
+find_package(Boost REQUIRED COMPONENTS system)
+find_package(blasfeo QUIET)
+find_package(hpipm QUIET)
 
 catkin_package(
   INCLUDE_DIRS include
@@ -24,15 +39,21 @@ catkin_package(
 include_directories(
     include
     ${catkin_INCLUDE_DIRS}
+    -lboost_system 
+    -lpinocchio
+    -lurdfdom_model
+    /usr/local/include/ct
 )
 
 add_library(${PROJECT_NAME}
   src/cc.cpp
 )
+
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 target_link_libraries(${PROJECT_NAME}
   ${catkin_LIBRARIES}
+  -lpinocchio
 )
 
 install(TARGETS ${PROJECT_NAME}
