--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,15 +10,23 @@ if (OPENMP_FOUND)
     set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
 
+list(APPEND CMAKE_PREFIX_PATH "/opt")
+find_package(blasfeo QUIET)
+find_package(hpipm QUIET)
+if(blasfeo_FOUND AND hpipm_FOUND)
+    message(STATUS "Found HPIPM and BLASFEO")
+    set(HPIPM ON)
+    list(APPEND HPIPM_LIBS hpipm blasfeo)
+    list(APPEND ct_optcon_COMPILE_DEFINITIONS HPIPM)
+else()
+    message(WARNING "Could not find HPIPM or BLASFEO")
+endif()
+
 find_package(catkin REQUIRED
-roscpp
-tocabi_lib
-tocabi_msgs
-ct_core
-ct_models
-ct_optcon
-ct_rbd
-eigen_conversions
+  roscpp
+  tocabi_lib
+  tocabi_msgs
+  eigen_conversions
 )
 
 find_package(Boost REQUIRED COMPONENTS system)
@@ -42,11 +50,11 @@ include_directories(
     -lboost_system 
     -lpinocchio
     -lurdfdom_model
-    /usr/local/include/ct
 )
 
 add_library(${PROJECT_NAME}
   src/cc.cpp
+  src/walking.cpp
 )
 
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
@@ -54,6 +62,7 @@ add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EX
 target_link_libraries(${PROJECT_NAME}
   ${catkin_LIBRARIES}
   -lpinocchio
+  ${HPIPM_LIBS}
 )
 
 install(TARGETS ${PROJECT_NAME}
