mob and shm dist

--- a/config/MPCgain.yaml
+++ b/config/MPCgain.yaml
@@ -46,3 +46,19 @@ ZuNy : 500.0
 zlNy : 0
 zuNy : 0
 
+arp : 0
+ark : 0
+
+app : 0
+apk : 0
+
+mobgain1 : 40
+mobgain2 : 40
+mobgain3 : 40
+mobgain4 : 60
+mobgain5 : 40
+mobgain6 : 40
+
+ft : 0
+
+
