mpc gain revise

--- a/config/MPCgain.yaml
+++ b/config/MPCgain.yaml
@@ -24,40 +24,42 @@ zuNx : 0
 
 Qy1 : 0.0
 Qy2 : 0.0
-Qy3 : 9000000
+Qy3 : 2500000
 Qy4 : 0.0
 Qy5 : 0.0
 
-Ry1 : 10000.0
+Ry1 : 8000.0
 Ry2 : 0.0
 
-Zl0y : 1000.0
-Zu0y : 1000.0
+Zl0y : 600.0
+Zu0y : 600.0
 zl0y : 0.0
 zu0y : 0.0
 
-Zl1y : 900.0
-Zu1y : 900.0
-zl1y : 1000.0
-zu1y : 1000.0
+Zl1y : 1700.0
+Zu1y : 1700.0
+zl1y : 0.0
+zu1y : 0.0
 
 ZlNy : 1000.0
 ZuNy : 1000.0
 zlNy : 0
 zuNy : 0
 
-arp_d : 0
-ark_d : 0.00
+arp_d : 30
+ark_d : 0.02
 app_d : 40
 apk_d : 0.07
 
-arp_s : 00
-ark_s : 0.0
+arp_s : 30
+ark_s : 0.02
 app_s : 60
 apk_s : 0.07
 
+com_gain : 0.05
+
 pelv_xp : 0.95
-pelv_yp : 4.5
+pelv_yp : 3.2
 
 zmp_xp : 0.10
 zmp_yp : 0.2
