--- a/config/MPCgain.yaml
+++ b/config/MPCgain.yaml
@@ -31,7 +31,7 @@ Qy4 : 0.0
 Qy5 : 0.0
 
 Ry1 : 10000.0
-Ry2 : 5.0
+Ry2 : 1.0
 
 Zl0y : 0.0
 Zu0y : 0.0
@@ -77,7 +77,7 @@ apk_sr : 0.06
 com_gain : 0.5
 
 pelv_xp : -0.4
-pelv_yp : -1.2
+pelv_yp : -0.8
 zmp_xp : 0.0
 zmp_yp : 0.0
 
@@ -98,3 +98,5 @@ mobgain5 : 40
 mobgain6 : 40
 
 ft : 0
+
+dist : 0
