--- a/config/MPCgain.yaml
+++ b/config/MPCgain.yaml
@@ -77,7 +77,7 @@ apk_sr : 0.05
 com_gain : 0.5
 
 pelv_xp : -0.5
-pelv_yp : -1.3
+pelv_yp : -0.8
 zmp_xp : 0.0
 zmp_yp : 0.0
 
@@ -90,16 +90,15 @@ T_fy : 3.0
 K_fz : 0.0001
 T_fz : 3.0
 
-mobgain1 : 40
-mobgain2 : 40
-mobgain3 : 40
-mobgain4 : 60
-mobgain5 : 40
-mobgain6 : 40
+dobrgain1 : -2
+dobrgain2 : -2
+dobrgain3 : -2
+dobrgain4 : -2
+dobrgain5 : -2
+dobrgain6 : -2
 
 ft : 0
 dist : 0
 
-openloop : 1
-global_ : 1
-pelvon : 1
+sim_mode : false
+dob_gain : 2.5
