--- a/config/MPCgain.yaml
+++ b/config/MPCgain.yaml
@@ -48,35 +48,37 @@ ZuNy : 0.0
 zlNy : 0
 zuNy : 0
 
-kc_r : 80
+zuNy : 0
+
+kc_r : 20
 tc_r : 10
 
-kc_p : 50
+kc_p : 20
 tc_p : 10
 
-arp_dl : 30
+arp_dl : 2
 ark_dl : 0.02
-app_dl : 20
-apk_dl : 0.04
+app_dl : 2
+apk_dl : 0.02
 
-arp_sl : 40
-ark_sl : 0.05
-app_sl : 30
-apk_sl : 0.04
+arp_sl : 3
+ark_sl : 0.03
+app_sl : 3
+apk_sl : 0.03
 
-arp_dr : 30
-ark_dr : 0.05
-app_dr : 20
-apk_dr : 0.04
+arp_dr : 2
+ark_dr : 0.02
+app_dr : 2
+apk_dr : 0.02
 
-arp_sr : 40
-ark_sr : 0.05
-app_sr : 30
-apk_sr : 0.04
+arp_sr : 3
+ark_sr : 0.03
+app_sr : 3
+apk_sr : 0.03
 
 com_gain : 0.5
 
-pelv_xp : -0.4
+pelv_xp : -0.8
 pelv_yp : -0.8
 zmp_xp : 0.0
 zmp_yp : 0.0
