--- a/config/MPCgain.yaml
+++ b/config/MPCgain.yaml
@@ -1,10 +1,10 @@
-Qx1 : 520000
+Qx1 : 22000
 Qx2 : 0.0
-Qx3 : 10000
+Qx3 : 80000
 Qx4 : 0.0
 Qx5 : 0.0
 
-Rx1 : 2.0
+Rx1 : 40.0
 Rx2 : 0.0
 
 Zl0x : 0.0
@@ -17,6 +17,11 @@ Zu1x : 30.0
 zl1x : 0.0
 zu1x : 0.0
 
+Zl1x1 : 2000000.0
+Zu1x1 : 2000000.0
+zl1x1 : 0.0
+zu1x1 : 0.0
+
 ZlNx : 0.0
 ZuNx : 0.0
 zlNx : 0
@@ -24,7 +29,14 @@ zuNx : 0
 
 lmom : 0.0
 
-Qy1 : 100
+ZlNx : 0.0
+ZuNx : 0.0
+zlNx : 0
+zuNx : 0
+
+lmom : 0.0
+
+Qy1 : 150000
 Qy2 : 0.0
 Qy3 : 100000
 Qy4 : 0.0
@@ -42,6 +54,11 @@ Zl1y : 80.0
 Zu1y : 80.0
 zl1y : 0.0
 zu1y : 0.0
+
+Zl1y1 : 2000000.0
+Zu1y1 : 2000000.0
+zl1y1 : 0.0
+zu1y1 : 0.0
 
 ZlNy : 0.0
 ZuNy : 0.0
@@ -98,5 +115,4 @@ mobgain5 : 40
 mobgain6 : 40
 
 ft : 0
-dist : 1
-
+dist : 0
