--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,8 @@ add_library(${PROJECT_NAME}
 )
 
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+ADD_DEFINITIONS(-DCROCODDYL_WITH_MULTITHREADING)
+ADD_DEFINITIONS(-DCROCODDYL_WITH_NTHREADS=4)
 
 target_link_libraries(${PROJECT_NAME}
   ${catkin_LIBRARIES}
