--- a/config/MPCgain.yaml
+++ b/config/MPCgain.yaml
@@ -1,12 +1,12 @@
-Kl_roll_dsp : 50.0
-Kl_pitch_dsp : 50.0
-Kr_roll_dsp : 50.0
-Kr_pitch_dsp : 50.0
+Kl_roll_dsp : 30.0
+Kl_pitch_dsp : 30.0
+Kr_roll_dsp : 30.0
+Kr_pitch_dsp : 30.0
 
-Kl_roll_ssp : 20.0
-Kl_pitch_ssp : 20.0
-Kr_roll_ssp : 20.0
-Kr_pitch_ssp : 20.0
+Kl_roll_ssp : 30.0
+Kl_pitch_ssp : 30.0
+Kr_roll_ssp : 30.0
+Kr_pitch_ssp : 30.0
 
 Kpl_roll : -0.15
 Kpl_pitch : 0.15
@@ -16,10 +16,14 @@ Kpr_pitch : 0.15
 del_zmpx_gain : 0.2
 del_zmpy_gain : 0.2
 
-F_F_input_Kp : 0.0004
-F_F_input_Kv : 3.0
+F_F_input_Kp : 0.0003
+F_F_input_Kv : 4.0
 
-pelvR_kp : 1.5
-pelvR_kv : 0.01
-pelvP_kp : 1.5
-pelvP_kv : 0.01
+pelvR_kp : 1.0
+pelvR_kv : 0.0
+pelvP_kp : 1.0
+pelvP_kv : 0.0
+
+legxP : 0.003
+legyP : 0.0005
+legzP : 0.003
