--- a/config/MPCgain.yaml
+++ b/config/MPCgain.yaml
@@ -1,13 +1,12 @@
-Kl_roll_dsp : 40.0
-Kl_pitch_dsp : 40.0
-Kr_roll_dsp : 40.0
-Kr_pitch_dsp : 40.0
+Kl_roll_dsp : 30.0
+Kl_pitch_dsp : 30.0
+Kr_roll_dsp : 30.0
+Kr_pitch_dsp : 30.0
 
-Kl_roll_ssp : 40.0
-Kl_pitch_ssp : 40.0
-Kr_roll_ssp : 40.0
-Kr_pitch_ssp : 40.0
-
+Kl_roll_ssp : 30.0
+Kl_pitch_ssp : 30.0
+Kr_roll_ssp : 30.0
+Kr_pitch_ssp : 30.0
 
 Kpl_roll : -0.055
 Kpl_pitch : 0.05
@@ -17,6 +16,9 @@ Kpr_pitch : 0.05
 del_zmpx_gain : 1.8
 del_zmpy_gain : 1.8
 
+del_zmpx_gain_init : 1.5
+del_zmpy_gain_init : 1.5
+
 F_F_input_Kp : 0.0003 #0.0003
 F_F_input_Kv : 4.0 #4.0
 
@@ -25,9 +27,9 @@ pelvR_kv : 0.0 #0.01
 pelvP_kp : 0.0 #1.0
 pelvP_kv : 0.0 #0.01
 
-legxP : 0.001
-legyP : 0.001
-legzP : 0.001
+legxP : 0.003
+legyP : 0.003
+legzP : 0.00
 
 com_kx : 0.00
 com_ky : 0.00
@@ -40,15 +42,15 @@ com_kz_init : 0.001
 foot_swr : 0.0
 foot_swp : 0.0
 
-momPelvR_init : 0.1
-momPelvP_init : 0.1
+momPelvR_init : 0.05
+momPelvP_init : 0.05
 
-momPelvR : 0.01
-momPelvP : 0.01
+momPelvR : 0.03
+momPelvP : 0.03
 
-swingR_init : 0.005
-swingP_init : 0.005
-swingR : 0.005
-swingP : 0.005
+swingR_init : 0.02
+swingP_init : 0.02
+swingR : 0.02
+swingP : 0.02
 
-controlwalk_time : 110
+controlwalk_time : 170
