--- a/config/MPCgain.yaml
+++ b/config/MPCgain.yaml
@@ -10,23 +10,23 @@ Kr_roll_ssp : 30.0
 Kr_pitch_ssp : 30.0
 
 Kpl_roll : -0.06
-Kpl_pitch : 0.03
+Kpl_pitch : 0.06
 Kpr_roll : -0.06
-Kpr_pitch : 0.03
+Kpr_pitch : 0.06
 
 del_zmpx_gain : 2.2
 del_zmpy_gain : 2.2
 
-del_zmpx_gain_init : 1.5
-del_zmpy_gain_init : 1.5
+del_zmpx_gain_init : 2.2
+del_zmpy_gain_init : 2.2
 
-F_F_input_Kp : 0.00001
-F_F_input_Kv : 10.0
+F_F_input_Kp : 0.0005
+F_F_input_Kv : 4.0
 
-pelvR_kp : 0.0 #1.0
-pelvR_kv : 0.0 #0.01
-pelvP_kp : 0.0 #1.0
-pelvP_kv : 0.0 #0.01
+pelvR_kp : 0.5
+pelvR_kv : 0.0
+pelvP_kp : 0.5
+pelvP_kv : 0.0
 
 legxP : 0.00
 legyP : 0.00
@@ -45,8 +45,8 @@ foot_swp : 0.0
 
 momPelvR_init : 0.1 #0.003
 momPelvP_init : 0.1
-momPelvR : 0.5 #0.1
-momPelvP : 0.5 #0.1
+momPelvR : 0.1 #0.1
+momPelvP : 0.1 #0.1
 
 swingR_init : 0.05 #0.01
 swingP_init : 0.05
@@ -58,8 +58,8 @@ impact_theta : 0.0
 
 controlwalk_time : 360 #220
 
-impact_theta : 0.0
-impact_force : 0.0
+impact_theta : 270
+impact_force : 520.0
 
-dis_mpc_init : 1000 #174, 153
+dis_mpc_init : 153 #174, 153
 dis_mpc_final : 180
