--- a/config/MPCgain.yaml
+++ b/config/MPCgain.yaml
@@ -32,7 +32,7 @@ legyP : 0.003
 legzP : 0.003
 
 com_kx : 0.0002
-com_ky : 0.0004
+com_ky : 0.003
 com_kz : 0.000
 
 com_kx_init : 0.000
@@ -44,12 +44,18 @@ foot_swp : 0.0
 
 momPelvR_init : 0.001
 momPelvP_init : 0.001
-momPelvR : 0.015 #0.08
-momPelvP : 0.005
+momPelvR : 0.05 #0.08
+momPelvP : 0.05
 
 swingR_init : 0.003
 swingP_init : 0.003
-swingR : 0.003
-swingP : 0.003
+swingR : 0.3
+swingP : 0.3
 
 controlwalk_time : 260 #352 #260
+
+impact_theta : 180
+impact_force : 200.0
+
+dis_mpc_init : 153 #174, 153
+dis_mpc_final : 180
